test/e2e/policy-lifecycle/project.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: Project
metadata:
  name: e2e-policy-lifecycle
spec:
  ownerRef:
    kind: Organization
    name: e2e-org
